[gd_scene load_steps=23 format=2]

[ext_resource path="res://Sprites/Temp_Backpack_info.PNG" type="Texture" id=1]
[ext_resource path="res://Player/Roster_Button.gd" type="Script" id=2]
[ext_resource path="res://Player/Info_Screen_Base.gd" type="Script" id=3]
[ext_resource path="res://Player/Roster_Screen.gd" type="Script" id=4]
[ext_resource path="res://Player/Back.gd" type="Script" id=5]
[ext_resource path="res://Player/Main_Backpack_Buttons.gd" type="Script" id=6]
[ext_resource path="res://Player/Prof_Discription.gd" type="Script" id=7]
[ext_resource path="res://Player/Prof1.gd" type="Script" id=8]
[ext_resource path="res://Player/Prof2.gd" type="Script" id=9]
[ext_resource path="res://Player/Prof3.gd" type="Script" id=10]
[ext_resource path="res://Player/Prof4.gd" type="Script" id=11]
[ext_resource path="res://Player/Prof5.gd" type="Script" id=12]
[ext_resource path="res://Player/Prof6.gd" type="Script" id=13]
[ext_resource path="res://Player/Items.gd" type="Script" id=14]
[ext_resource path="res://Player/Item_Screen.gd" type="Script" id=15]
[ext_resource path="res://Theme/UI.tres" type="Theme" id=16]
[ext_resource path="res://Player/Player_Backpack.gd" type="Script" id=17]
[ext_resource path="res://Player/Button.gd" type="Script" id=18]
[ext_resource path="res://Sprites/Black_Texture.PNG" type="Texture" id=19]
[ext_resource path="res://Player/Item Buttons.gd" type="Script" id=20]
[ext_resource path="res://Player/RichTextLabel.gd" type="Script" id=21]
[ext_resource path="res://Player/Professor Buttons.gd" type="Script" id=22]

[node name="Player Backpack" type="Node2D"]
script = ExtResource( 17 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
editor_draw_limits = true
editor_draw_drag_margin = true
__meta__ = {
"_edit_lock_": true
}

[node name="Main_Backpack_Buttons" type="Control" parent="."]
visible = false
margin_top = -98.0
margin_right = 174.0
margin_bottom = 98.0
theme = ExtResource( 16 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Roster" type="Button" parent="Main_Backpack_Buttons"]
margin_left = 50.0
margin_top = 1.0
margin_right = 108.0
margin_bottom = 21.0
text = "Roster"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Professor-Dex" type="Button" parent="Main_Backpack_Buttons"]
margin_left = 50.0
margin_top = 23.0
margin_right = 173.0
margin_bottom = 43.0
text = "Professor-Dex"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Items" type="Button" parent="Main_Backpack_Buttons"]
margin_left = 50.0
margin_top = 45.0
margin_right = 100.0
margin_bottom = 65.0
text = "Items"
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info_Screen_Base" type="Control" parent="."]
margin_left = -173.0
margin_top = -98.0
margin_bottom = 99.0
theme = ExtResource( 16 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info_ECE" type="TextureRect" parent="Info_Screen_Base"]
visible = false
margin_left = 7.72986
margin_right = 319.73
margin_bottom = 385.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GPA_Display" type="Label" parent="Info_Screen_Base"]
margin_right = 40.0
margin_bottom = 15.0
theme = ExtResource( 16 )
text = "GPA - 4.1"

[node name="Roster_Screen" type="Control" parent="."]
visible = false
margin_left = -174.0
margin_top = -99.0
margin_right = 174.0
margin_bottom = 98.0
theme = ExtResource( 16 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Prof1" type="Button" parent="Roster_Screen"]
margin_left = 250.0
margin_top = 1.0
margin_right = 299.0
margin_bottom = 21.0
text = "Prof 1"
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Prof2" type="Button" parent="Roster_Screen"]
margin_left = 250.0
margin_top = 28.0
margin_right = 299.0
margin_bottom = 48.0
text = "Prof 2"
script = ExtResource( 9 )

[node name="Prof3" type="Button" parent="Roster_Screen"]
margin_left = 249.703
margin_top = 55.0
margin_right = 298.703
margin_bottom = 75.0
text = "Prof 3"
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Prof4" type="Button" parent="Roster_Screen"]
margin_left = 250.0
margin_top = 82.0
margin_right = 299.0
margin_bottom = 102.0
text = "Prof 4"
script = ExtResource( 11 )

[node name="Prof5" type="Button" parent="Roster_Screen"]
margin_left = 250.0
margin_top = 109.0
margin_right = 299.0
margin_bottom = 129.0
text = "Prof 5"
script = ExtResource( 12 )

[node name="Prof6" type="Button" parent="Roster_Screen"]
margin_left = 250.0
margin_top = 136.0
margin_right = 299.0
margin_bottom = 156.0
text = "Prof 6"
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="Roster_Screen"]
margin_left = 305.329
margin_top = 176.597
margin_right = 347.329
margin_bottom = 196.597
text = "Back"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Roster_Screen"]
margin_right = 174.0
margin_bottom = 198.0
text = "Hi, I have the info about this professor. :)"
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Item_Screen" type="Control" parent="."]
visible = false
margin_left = -174.0
margin_top = -98.0
margin_right = 173.0
margin_bottom = 99.0
theme = ExtResource( 16 )
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back2" type="Button" parent="Item_Screen"]
margin_left = 305.329
margin_top = 175.597
margin_right = 347.329
margin_bottom = 195.597
text = "Back"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Item_Info_Screen" type="Control" parent="Item_Screen"]
margin_right = 174.0
margin_bottom = 196.0
theme = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Item_Info Screen" type="TextureRect" parent="Item_Screen/Item_Info_Screen"]
margin_left = -4.96219
margin_top = -1.0
margin_right = 477.038
margin_bottom = 270.0
rect_scale = Vector2( 0.38, 0.75 )
texture = ExtResource( 19 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Item_Description" type="RichTextLabel" parent="Item_Screen/Item_Info_Screen"]
margin_right = 174.0
margin_bottom = 201.0
script = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Professor Buttons" type="Control" parent="Item_Screen/Item_Info_Screen"]
margin_left = -5.0
margin_top = 140.0
margin_right = 178.0
margin_bottom = 202.0
script = ExtResource( 22 )

[node name="Prof1" type="Button" parent="Item_Screen/Item_Info_Screen/Professor Buttons"]
margin_left = 3.0
margin_right = 86.0
margin_bottom = 19.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Prof2" type="Button" parent="Item_Screen/Item_Info_Screen/Professor Buttons"]
margin_left = 90.0
margin_right = 173.0
margin_bottom = 19.0
script = ExtResource( 9 )

[node name="Prof3" type="Button" parent="Item_Screen/Item_Info_Screen/Professor Buttons"]
margin_left = 3.0
margin_top = 18.0
margin_right = 86.0
margin_bottom = 37.0
script = ExtResource( 10 )

[node name="Prof4" type="Button" parent="Item_Screen/Item_Info_Screen/Professor Buttons"]
margin_left = 90.0
margin_top = 18.0
margin_right = 173.0
margin_bottom = 37.0
script = ExtResource( 11 )

[node name="Prof5" type="Button" parent="Item_Screen/Item_Info_Screen/Professor Buttons"]
margin_left = 3.0
margin_top = 36.0
margin_right = 86.0
margin_bottom = 55.0
script = ExtResource( 12 )

[node name="Prof6" type="Button" parent="Item_Screen/Item_Info_Screen/Professor Buttons"]
margin_left = 90.0
margin_top = 36.0
margin_right = 173.0
margin_bottom = 55.0
script = ExtResource( 13 )

[node name="Item Buttons" type="Control" parent="Item_Screen"]
margin_left = 237.0
margin_right = 347.0
margin_bottom = 175.0
script = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Item_Screen/Item Buttons"]
margin_left = -20.0
margin_right = 90.0
margin_bottom = 19.0
script = ExtResource( 18 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Item_Screen/Item Buttons"]
margin_left = -20.0
margin_top = 22.0
margin_right = 90.0
margin_bottom = 41.0
script = ExtResource( 18 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="Item_Screen/Item Buttons"]
margin_left = -20.0
margin_top = 44.0
margin_right = 90.0
margin_bottom = 63.0
script = ExtResource( 18 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
[connection signal="update" from="." to="Item_Screen/Item_Info_Screen/Item_Description" method="_update"]
[connection signal="update" from="." to="Item_Screen/Item Buttons" method="_on_Player_Backpack_update"]
[connection signal="Open_Roster" from="Main_Backpack_Buttons/Roster" to="Info_Screen_Base" method="_on_Roster_Open_Roster"]
[connection signal="Open_Roster" from="Main_Backpack_Buttons/Roster" to="Roster_Screen" method="_on_Roster_Open_Roster"]
[connection signal="script_changed" from="Main_Backpack_Buttons/Roster" to="Info_Screen_Base" method="_on_Roster_script_changed"]
[connection signal="items" from="Main_Backpack_Buttons/Items" to="Info_Screen_Base" method="_on_Items_items"]
[connection signal="items" from="Main_Backpack_Buttons/Items" to="Item_Screen" method="_on_Items_items"]
[connection signal="Prof_Pressed" from="Roster_Screen/Prof1" to="Roster_Screen/RichTextLabel" method="_on_Prof1_Prof_Pressed"]
[connection signal="Prof2_Pressed" from="Roster_Screen/Prof2" to="Roster_Screen/RichTextLabel" method="_on_Prof2_Prof2_Pressed"]
[connection signal="Prof3_Pressed" from="Roster_Screen/Prof3" to="Roster_Screen/RichTextLabel" method="_on_Prof3_Prof3_Pressed"]
[connection signal="Prof4_Pressed" from="Roster_Screen/Prof4" to="Roster_Screen/RichTextLabel" method="_on_Prof4_Prof4_Pressed"]
[connection signal="Prof5_Pressed" from="Roster_Screen/Prof5" to="Roster_Screen/RichTextLabel" method="_on_Prof5_Prof5_Pressed"]
[connection signal="Prof6_Pressed" from="Roster_Screen/Prof6" to="Roster_Screen/RichTextLabel" method="_on_Prof6_Prof6_Pressed"]
[connection signal="back_button_pressed" from="Roster_Screen/Back" to="Roster_Screen/RichTextLabel" method="_on_Back_back_button_pressed"]
[connection signal="back_button_pressed" from="Roster_Screen/Back" to="Info_Screen_Base" method="_on_Back_back_button_pressed"]
[connection signal="back_button_pressed" from="Roster_Screen/Back" to="Main_Backpack_Buttons" method="_on_Back_back_button_pressed"]
[connection signal="back_button_pressed" from="Roster_Screen/Back" to="Roster_Screen" method="_on_Back_back_button_pressed"]
[connection signal="back_button_pressed" from="Item_Screen/Back2" to="Roster_Screen/RichTextLabel" method="_on_Back_back_button_pressed"]
[connection signal="back_button_pressed" from="Item_Screen/Back2" to="Info_Screen_Base" method="_on_Back_back_button_pressed"]
[connection signal="back_button_pressed" from="Item_Screen/Back2" to="Main_Backpack_Buttons" method="_on_Back_back_button_pressed"]
[connection signal="back_button_pressed" from="Item_Screen/Back2" to="Roster_Screen" method="_on_Back_back_button_pressed"]
[connection signal="update" from="Item_Screen/Item_Info_Screen/Item_Description" to="Item_Screen/Item_Info_Screen/Professor Buttons" method="_on_Item_Description_update"]
[connection signal="used" from="Item_Screen/Item_Info_Screen/Item_Description" to="." method="_on_Item_Description_used"]
[connection signal="Prof_Pressed" from="Item_Screen/Item_Info_Screen/Professor Buttons/Prof1" to="Item_Screen/Item_Info_Screen/Item_Description" method="_Prof_Pressed"]
[connection signal="Prof2_Pressed" from="Item_Screen/Item_Info_Screen/Professor Buttons/Prof2" to="Item_Screen/Item_Info_Screen/Item_Description" method="_Prof_Pressed"]
[connection signal="Prof3_Pressed" from="Item_Screen/Item_Info_Screen/Professor Buttons/Prof3" to="Item_Screen/Item_Info_Screen/Item_Description" method="_Prof_Pressed"]
[connection signal="Prof4_Pressed" from="Item_Screen/Item_Info_Screen/Professor Buttons/Prof4" to="Item_Screen/Item_Info_Screen/Item_Description" method="_Prof_Pressed"]
[connection signal="Prof5_Pressed" from="Item_Screen/Item_Info_Screen/Professor Buttons/Prof5" to="Item_Screen/Item_Info_Screen/Item_Description" method="_Prof_Pressed"]
[connection signal="Prof6_Pressed" from="Item_Screen/Item_Info_Screen/Professor Buttons/Prof6" to="Item_Screen/Item_Info_Screen/Item_Description" method="_Prof_Pressed"]
[connection signal="update" from="Item_Screen/Item Buttons/Button" to="Item_Screen/Item_Info_Screen/Item_Description" method="_update"]
[connection signal="update" from="Item_Screen/Item Buttons/Button2" to="Item_Screen/Item_Info_Screen/Item_Description" method="_update"]
[connection signal="update" from="Item_Screen/Item Buttons/Button3" to="Item_Screen/Item_Info_Screen/Item_Description" method="_update"]
